--- a/Momenty.Web/packages.config
+++ b/Momenty.Web/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="Dapper" version="2.0.78" targetFramework="net472" />
+  <package id="Dapper.Contrib" version="2.0.78" targetFramework="net472" />
   <package id="FluentMigrator" version="3.2.11" targetFramework="net472" />
   <package id="FluentMigrator.Abstractions" version="3.2.11" targetFramework="net472" />
   <package id="FluentMigrator.Extensions.Oracle" version="3.2.11" targetFramework="net472" />
