--- a/Momenty.Web/Momenty.Web.csproj
+++ b/Momenty.Web/Momenty.Web.csproj
@@ -216,19 +216,30 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Business\Services\Interfaces\IScrapeService.cs" />
+    <Compile Include="Business\Services\Models\GenericFundObject.cs" />
+    <Compile Include="Business\Services\ScrapeService.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="DAL\Entities\Fund.cs" />
+    <Compile Include="Controllers\ScrapeController.cs" />
+    <Compile Include="DAL\Constants\SortedOnTypes.cs" />
     <Compile Include="DAL\Entities\FundReturnRate.cs" />
-    <Compile Include="DAL\Entities\GenericFund.cs" />
     <Compile Include="DAL\Infrastructure\ConnectionFactories\ConnectionFactory.cs" />
     <Compile Include="DAL\Infrastructure\ConnectionFactories\IConnectionFactory.cs" />
     <Compile Include="DAL\Migrations\202102112113_AddFundTable.cs" />
     <Compile Include="DAL\Migrations\202102112155_AddFundReturnRatesTable.cs" />
+    <Compile Include="DAL\Migrations\202102171827_AddFields_FundReturnTable.cs" />
+    <Compile Include="DAL\Migrations\202102172006_CastDecimalToDouble_FundReturnRates.cs" />
+    <Compile Include="DAL\Migrations\202102172027_RemoveFundTable.cs" />
+    <Compile Include="DAL\Migrations\202102172031_AlterFundIdToFundName_FundReturnRates.cs" />
+    <Compile Include="DAL\Migrations\202102172108_AddId_FundReturnRates.cs" />
+    <Compile Include="DAL\Migrations\202102172115_FixId_FundReturnRates.cs" />
     <Compile Include="DAL\Migrations\MigrationRunner\FluentMigratorRunner.cs" />
     <Compile Include="DAL\Repositories\FundRepository.cs" />
     <Compile Include="DAL\Repositories\Generic\GenericRepository.cs" />
     <Compile Include="DAL\Repositories\Generic\IGenericRepository.cs" />
     <Compile Include="DAL\Repositories\IFundRepository.cs" />
+    <Compile Include="DAL\Services\FundDatabaseService.cs" />
+    <Compile Include="DAL\Services\IFundDatabaseService.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -274,7 +285,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="DAL\Services\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
