--- a/Momenty.Web/Web.config
+++ b/Momenty.Web/Web.config
@@ -9,6 +9,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<add key="MomentyScraperBaseUrl" value ="http://localhost:3000/api/" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
